# first-project

./: README.md  main.py  pyproject.toml
agent/: LLM_image_recogniton.py
products_file/: all_product_images.csv  洗碗机.csv  洗碗机_分析结果.csv
tools/: JDTools.py  dimension_manager.py  file_handler.py  image_processor.py  jd_scraper.py  path_tools.py  workflow_manager.py
